Fix mobile login container right alignment

--- a/res/style.css
+++ b/res/style.css
@@ -198,10 +198,10 @@ input:focus {
 .player-name-choose {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
     height: 50vh;
     gap: 15px;
+    margin-top: min(10vh, 60px);
 }
 
 
